tests/ui/repr/repr-disallow-on-variant.stderr
error: the `repr(u8)` attribute cannot be used on enum variants
  --> $DIR/repr-disallow-on-variant.rs:4:7
   |
LL |     #[repr(u8)]
   |       ^^^^^^^^
   |
   = help: the `repr(u8)` attribute can only be applied to enums

error: aborting due to 1 previous error

